--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,13 +1,8 @@
 <div class="m-4 p-3 container mx-auto">
 <h1>New Task</h1>
 
-<%= form_with model: @task do |f|%>
-  <%= f.label :title %>
-  <%= f.text_field :title%>
-  <%= f.label :details %>
-  <%= f.text_field :details%>
-  <%= f.submit %>
-<% end %>
+<%= render "form", tasks: @task %>
+
 
 <div class="text-end">
 <%= link_to "Back to task", tasks_path %>
