--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,16 +1,7 @@
 <div class="m-4 p-3 container mx-auto">
 <h1>Edit Task</h1>
-<%= form_with model: @task do |f|%>
-  <%= f.label :title %>
-  <%= f.text_field :title%>
-  <%= f.label :details %>
-  <%= f.text_field :details%>
-  <% unless @task.title.empty?%>
-  <%= f.label :completed %>
-  <%= f.check_box :completed%>
-  <% end %>
-  <%= f.submit %>
-<% end %>
+
+<%= render "form", tasks: @task %>
 
 <div class="text-end">
 <%= link_to "Back to task", task_path %>
